recursion.logo.spiral.Spiral.scala.error
Erreur de compilation :
Spiral:2: error: value =! is not a member of Int
  if (steps=!0){
           ^Spiral:3: error: not found: value lenght
     avance(lenght:Double)
            ^Spiral:5: error: not found: value lenght
     spiral(steps-1,angle,lenght+increment,increment)
                          ^